Allow vendor carrier_config entries to stand alone
Some vendor configurations do not specify every available attribute and
expect to stand alone, with default values filling in the gaps. However,
if a carrier_config from our assets sets an attribute that is not set by
the vendor, this can lead to unexpected behavior, with our settings
effectively overriding the vendor's preference. For example, with CDNR,
having carrier_name_override_bool set to true in our assets can lead
to network name resolution problems if it is not explicitly specified
as false in the vendor-supplied carrier_config.

Add the standalone_vendor_entries flag (default false), allowing the
vendor entries to replace existing entries entirely when present,
disregarding attributes specified here, so that non-present attributes
use their expected default values instead of being merged with ours.

Issue: calyxos#2256
Change-Id: Ia0b20e69e3f76213b2a62bad70852a5d1c51b2b4

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -18,4 +18,11 @@
 <resources>
     <!-- Setting for SKU filter to be customizable. -->
     <string name="sku_filter" translatable="false"></string>
+
+    <!-- Flag indicating whether vendor-supplied carrier_config entries should be treated as
+         standalone, meaning that if our assets folder contains a carrier_config for the entry
+         already, it will be disregarded in favor of the vendor's. When false, attributes from
+         vendor-supplied carrier_config entries are merged with ours, preserving attributes that
+         are not specified by the vendor configuration. -->
+    <bool name="standalone_vendor_entries">false</bool>
 </resources>
